infra/modules/security_group/private_sg/main.tf
resource "aws_security_group" "postgres" {
  name        = var.sg_postgres_name
  description = "SG para RDS PostgreSQL privado"
  vpc_id      = var.vpc_id

  ingress {
    description     = "Acesso da API"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [var.api_sg_id]
  }

  ingress {
    description     = "Acesso do Bastion Host"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [var.bastion_sg_id]
  }

  ingress {
    description     = "Acesso das Lambdas"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [var.lambda_sg_id]
  }

  egress {
    description = "Saida liberada"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.tags
}
